attempted fix for nowrap

--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -66,7 +66,9 @@ pre {
   margin: 0;
   padding: 1em;
   border-left: 2px solid $red;
-  white-space: nowrap;
+  white-space: pre;
+  word-break: normal;
+  word-wrap: normal;
 }
 
 code {
